--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
-		<script>
-			console.log("Olá Mundo");
-		</script>
+
 	</head>
 	<body>
 		<header>
 			<div class="container">
-				<h1>Aparecida Nutrição</h1>
+				<h1 class="titulo">Aparecida Nutrição</h1>
 			</div>
 		</header>
 		<main>
@@ -30,7 +28,7 @@
 						</tr>
 					</thead>
 					<tbody id="tabela-pacientes">
-						<tr class="paciente" >
+						<tr class="paciente" id="primeiro-paciente" >
 							<td class="info-nome">Paulo</td>
 							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
@@ -73,6 +71,6 @@
 
 			</section>
 		</main>
-
+		<script src="js/principal.js"> </script>
 	</body>
 </html>
