--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 		    </form>
    </section>
 		</main>
-		<script src="js/principal.js"> </script>
+		<script src="js/calcula-imc.js"> </script>
+		<script src="js/form.js"> </script>
 	</body>
 </html>
