--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 						<tr class="paciente" >
 							<td class="info-nome">João</td>
-							<td class="info-peso">8000</td>
+							<td class="info-peso">80</td>
 							<td class="info-altura">1.72</td>
 							<td class="info-gordura">40</td>
 							<td class="info-imc">0</td>
@@ -72,6 +72,7 @@
 			</section>
 			<section class="container">
 		    <h2 id="titulo-form">Adicionar novo paciente</h2>
+				<ul id="mensagens-erro"></ul>
 		    <form id="form-adiciona">
 		        <div class="">
 		            <label for="nome">Nome:</label>
