--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<h2>Meus pacientes</h2>
 				<label form="filtrar-tabela">Filtre:</label>
 				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">
+
 				<table>
 					<thead>
 						<tr>
@@ -70,6 +71,9 @@
 						</tr>
 					</tbody>
 				</table>
+				<span id= "erro-ajax" class="invisivel">Erro ao buscar os pacientes</span>
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
+
 
 			</section>
 			<section class="container">
@@ -101,6 +105,7 @@
 		<script src="js/form.js"> </script>
 		<script src="js/remover-paciente.js"> </script>
 		<script src="js/filtra.js"> </script>
+		<script src="js/buscar-pacientes.js"> </script>
 
 	</body>
 </html>
